fix: update image name

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 <h3>Steven "NaaQ" Copy</h3>
                                 <div class="swiper-content">
                                     <div class="swiper-image">
-                                        <img src="img/naaq.webp" alt="NaaQ Gangsters NFT Profile Pictures">
+                                        <img src="img/Naaq.webp" alt="NaaQ Gangsters NFT Profile Pictures">
                                     </div>
                                     <div class="swiper-text">
                                         <p><b>Co-Founder</b></p>
@@ -228,7 +228,7 @@
                                 <h3>Sam "Yakou" Bakri</h3>
                                 <div class="swiper-content">
                                     <div class="swiper-image">
-                                        <img src="img/yakou.webp" alt="Yakou Gangsters NFT Profile Pictures">
+                                        <img src="img/Yakou.webp" alt="Yakou Gangsters NFT Profile Pictures">
                                     </div>
                                     <div class="swiper-text">
                                         <p><b>Co-Founder</b></p>
@@ -247,7 +247,7 @@
                                 <h3>Thomas "Draphikas" Bocquez</h3>
                                 <div class="swiper-content">
                                     <div class="swiper-image">
-                                        <img src="img/draph.webp" alt="Draph Gangsters NFT Profile Pictures">
+                                        <img src="img/Draph.webp" alt="Draph Gangsters NFT Profile Pictures">
                                     </div>
                                     <div class="swiper-text">
                                         <p>Fullstack Developer</p>
