feat: update Yakou

--- a/index.html
+++ b/index.html
@@ -225,14 +225,14 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="swiper-container">
-                                <h3>Sam "Yakou" Bakri</h3>
+                                <h3>Sam "Yakou" Dona</h3>
                                 <div class="swiper-content">
                                     <div class="swiper-image">
                                         <img src="img/Yakou.webp" alt="Yakou Gangsters NFT Profile Pictures">
                                     </div>
                                     <div class="swiper-text">
                                         <p><b>Co-Founder</b></p>
-                                        <p>Community Development</p>
+                                        <p>Social Media Manager</p>
                                         <div class="social">
                                             <a href="https://twitter.com/YakouHQ">
                                                 <img src="img/twitter.gif" alt="twitter logo" height="20px" /> 
